k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapplication
  namespace: myapplication
  labels:
    app: myapplication
spec:
  type: ClusterIP
  selector:
    app: myapplication
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
